--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <div>
-        <img src="/images/avatar-jessica.jpeg" alt="image" />
+        <img src="/images/jessica.jpeg" alt="image" />
       </div>
       <div>
         <h1>Stephen Olusola</h1>
