--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <div>
-        <img src="/images/favicon-32x32.png" alt="image" />
+        <img src="/images/jessica.webp" alt="image" />
       </div>
       <div>
         <h1>Stephen Olusola</h1>
