--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <div>
-        <img src="jessica.webp" alt="jesica" />
+        <img src="/images/jessica.webp" alt="" />
       </div>
       <div>
         <h1>Stephen Olusola</h1>
